@@ -1,3 +1,8 @@
+2000-07-17  Larry Jones  <larry.jones@sdrc.com>
+
+	* sanity.sh (modules5-7, cvsadm-1e, emptydir-2): Allow for a nil
+	commit (can happen if the test is run twice in a row).
+
 2000-07-19  Pavel Roskin  <proski@gnu.org>
 	and Larry Jones  <larry.jones@sdrc.com>
 
